...
    <string name="content_description_decrease_item_value">Decrease Item value</string>
    <string name="swipe_to_refresh_description">The app also refreshes automatically, you normally don\'t need to do it manually</string>
    <string name="got_it">Got it!</string>

    <!-- Intro strings -->
    <string name="app_intro">Intro</string>
    <string name="intro_welcome">Welcome to openHAB</string>
    <string name="intro_welcome_back">Welcome back to openHAB</string>
    <string name="intro_app_restored">Most of your settings have been restored, except the server credentials</string>
    <string name="intro_whatis">A vendor and technology agnostic open source automation software for your home</string>
    <string name="intro_voice_description">Control your home with your voice</string>
    <string name="intro_nfc">NFC</string>
    <string name="intro_nfc_description">Item control can be bound to NFC tags by long-pressing the Item</string>
    <string name="intro_quick_tile_description">Control your home from the quick settings of your device (the place that holds the toggles for e.g. Wi-Fi and Bluetooth)</string>
    <string name="intro_send_device_info">Send device information to your server</string>
    <string name="intro_send_device_info_description">For example turn on your lights when the alarm clock rings</string>
    <!-- Intro "SKIP" button -->
    <string name="app_intro_skip_button">SKIP</string>
    <!-- Intro "DONE" button -->
    <string name="app_intro_done_button">DONE</string>

    <!-- Item picker -->
    <string name="item_picker_list_empty">No Items found</string>
    <string name="item_picker_list_error">An error occurred while loading Items</string>
    <string name="item_picker_custom">Custom</string>
...
