<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <org.openhab.habdroid.ui.widget.WidgetImageView
        android:id="@+id/widgeticon"
        android:paddingTop="6dip"
        android:paddingBottom="6dip"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_gravity="center_vertical"
        android:maxWidth="50dip"
        android:minWidth="50dip"
        android:maxHeight="50dip"
        android:minHeight="50dip" />

    <TextView
        android:id="@+id/widgetlabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</merge>