<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Space
        android:id="@+id/first_view_spacer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/frame_chip_background">

        <TextView
            android:id="@+id/widgetlabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnPrimaryContainer"
            tools:text="Frame title" />

    </FrameLayout>

</FrameLayout>
